<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/RojoOscuro"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:gravity="right|center_vertical"
        android:text="TextView"
        android:textSize="34sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:layout_span="3"
                android:backgroundTint="#FFFFFF"
                android:text="@string/CLEAR"
                android:textColor="#090909" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:backgroundTint="@color/Naranja"
                android:text="@string/Dividir" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnSiete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Siete" />

            <Button
                android:id="@+id/btnOcho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Ocho" />

            <Button
                android:id="@+id/btnNueve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Nueve" />

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:backgroundTint="@color/Naranja"
                android:text="@string/Multiplicar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnCuatro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Cuatro" />

            <Button
                android:id="@+id/btnCinco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Cinco" />

            <Button
                android:id="@+id/btnSeis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Seis" />

            <Button
                android:id="@+id/button25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:backgroundTint="@color/Naranja"
                android:text="@string/Restar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Uno" />

            <Button
                android:id="@+id/button26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Dos" />

            <Button
                android:id="@+id/button27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Tres" />

            <Button
                android:id="@+id/button28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:backgroundTint="@color/Naranja"
                android:text="@string/Sumar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:layout_span="2"
                android:text="@string/Cero" />

            <Button
                android:id="@+id/button31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:text="@string/Punto" />

            <Button
                android:id="@+id/button29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_span="1"
                android:backgroundTint="@color/Naranja"
                android:text="@string/Igual" />
        </TableRow>
    </TableLayout>
</LinearLayout>